--- a/root/projects/slingshot/source/web/components/documentlibrary/toolbar.css
+++ b/root/projects/slingshot/source/web/components/documentlibrary/toolbar.css
@@ -334,19 +334,19 @@
 
 .toolbar .documentDragOverHighlight
 {
-   outline: 2px solid #4F94C9;
-   outline-offset: -2px;
-   background-color: #dceaf4;
+   outline: 1px solid #4f94c9;
+   outline-offset: -1px;
+   background-color: #cde8fa;
 }
 
 .toolbar .documentDragOverArrow
 {
-   background: url(../images/vertical-green-arrow-small.png) no-repeat;
+   background: url(../images/drop-arrow-left-small.png) no-repeat;
    z-index: 1;
    height: 25px;
    display: block;
    position: absolute;
    width: 25px;
    margin-top: -10px;
-   margin-left: 3px;
+   margin-left: 10px;
 }
