--- a/root/projects/slingshot/source/web/components/documentlibrary/tree.css
+++ b/root/projects/slingshot/source/web/components/documentlibrary/tree.css
@@ -52,30 +52,25 @@
 
 .treeview .selected
 {
-   background-color: #dceaf4;
+   background-color: #e1f0fa;
 }
 
 .treeview .documentDragOverHighlight
 {
-   outline: 2px solid #4F94C9;
-   outline-offset: -2px;
-   background-color: #dceaf4;
+   outline: 1px solid #4f94c9;
+   outline-offset: -1px;
+   background-color: #cde8fa;
    width: 100%;
-}
-
-.treeview .documentDragOverArrowContainer
-{
-   position: relative;
 }
 
 .treeview .documentDragOverArrow
 {
-   background: url(../images/vertical-green-arrow-small.png) no-repeat;
+   background: url(../images/drop-arrow-left-small.png) no-repeat;
    z-index: 1;
    height: 25px;
    display: block;
    position: absolute;
    width: 25px;
    margin-top: -30px;
-   margin-left: 2px;
+   margin-left: 10px;
 }
